# GHEDesigner

./: .cspell.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .spelling.dic  404.html  CHANGELOG.md  CONTRIBUTING.md  Create_Branch.sh  INSTALLATION.md  LICENSE  Loads_DULUTH.csv  MANIFEST.in  PropBound.csv  README.md  conftest.py  contributors.md  contributors.txt  index.html  interpolator_table_2x2x2.pkl  interpolator_table_huge.pkl  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  test.py  test_access.txt
.github/: contributing.md  issue_template.md  pull_request_template.md
.run/: MkDocs serve.run.xml  Prettier.run.xml  Pytest.run.xml  Ruff format.run.xml  Ruff.run.xml  mypy.run.xml  pre-commit.run.xml  typos.run.xml
EFT/: GOutputs.csv  HLTest1.csv  HLTest2.csv  HLTest3.csv  HLTest4.csv  HPTest1.csv  HPTest2.csv  HPTest4.csv  Outputs-Plotting.csv  Outputs.csv  Test-Atlanta.py  TotalRates.py  gfuncOutputs.csv  gvals.csv  testing.py  trial.py
GHEDT/: __init__.py  ground_heat_exchangers.py
GLHEDT/: __init__.py  geothermal.py  ground_heat_exchangers.py
NogoZones/: Appt1.csv  Appt10.csv  Appt11.csv  Appt12.csv  Appt2.csv  Appt3.csv  Appt4.csv  Appt5.csv  Appt6.csv  Appt7.csv  Appt8.csv  Appt9.csv  Hotel.csv  Office.csv  School.csv
cli/: index.html
demos/: find_design_bi_rectangle_constrained_single_u_tube.json  find_design_bi_rectangle_constrained_single_u_tube_loads_path.json  find_design_bi_rectangle_constrained_single_u_tube_prop_boundary_only.json  find_design_bi_rectangle_double_u_tube_series.json  find_design_bi_rectangle_single_u_tube.json  find_design_bi_zoned_rectangle_single_u_tube.json  find_design_near_square_coaxial.json  find_design_near_square_double_u_tube.json  find_design_near_square_single_u_tube.json  find_design_rectangle_coaxial.json  find_design_rectangle_double_u_tube.json  find_design_rectangle_single_u_tube.json  find_design_rectangle_single_u_tube_bldg_loads.json  find_design_rectangle_single_u_tube_custom_fluid.json  find_design_rectangular_coaxial.json  find_design_rectangular_double_u_tube.json  find_design_rectangular_single_u_tube.json  find_design_rowwise_single_u_tube.json  find_design_rowwise_single_u_tube_prop_boundary_only.json  find_design_simple_system.json  find_design_with_hourly_load_aggregation.json  input_bldg0000056_odd_loads.json  issue_97_interp_out_of_range.json  pre_designed_manual.json  pre_designed_rectangle.json  run_simulation_presized.json  run_simulation_presized_manual.json  run_simulation_presized_rectangle.json  simple_district.json  simulate_1_pipe_1_ghe_1_bldg_district.json  simulate_1_pipe_3_bldg_3_ghe_with_hx.json  simulate_1_pipe_3_bldg_3_ghe_without_hx.json  simulate_1_pipe_3_ghe_6_bldg_district.json  simulate_3_bldg_3_ghe.json
docs/: background.rst  cli.md  cli.rst  conf.py  examples.md  examples.rst  index.md  index.rst  manager.md  manager.rst  schemas.md  schemas.rst
examples/: find_bi_polygon.py  index.html
ghedesigner/: __init__.py  borehole.py  borehole_heat_exchangers.py  build_horizontal_interpolator.py  building.py  constants.py  convert.py  coordinates.py  design.py  district_system.py  district_system_again.py  domains.py  enums.py  equivalance.py  example_inputs.json  feature_recognition.py  fluid.py  geometry.py  gfunction.py  ghedesigner.schema.json  ground_heat_exchangers.py  ground_loads.py  heat_pump.py  heat_pump_fixed_cop.py  horizontal_interpolator.py  horizontal_pipe_heat_exchange.py  horizontal_system_solver.py  main.py  manager.py  media.py  mock_horizontal_system_tester.py  output.py  plot_horizontal_pipe_temperature.py  radial_numerical_borehole.py  rowwise.py  rowwise_generation.py  search_routines.py  shape.py  simulation.py  system.py  (+2 more)
ghedt/: Output.py  README.md  __init__.py  borehole_heat_exchangers.py  coordinates.py  design.py  domains.py  equivalance.py  feature_recognition.py  fluid.py  geometry.py  gfunction.py  ground_heat_exchangers.py  ground_loads.py  media.py  output.py  radial_numerical_borehole.py  rowwise_generation.py  search_routines.py  shape.py  utilities.py
ghedt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
glhepro/: template_v5.1.gli
manager/: index.html
schema/: borehole.schema.md  design.schema.md  file_structure.schema.md  fluid.schema.md  geometric_bi_rectangle.schema.md  geometric_bi_rectangle_constrained.schema.md  geometric_bi_zoned_rectangle.schema.md  geometric_near_square.schema.md  geometric_rectangle.schema.md  geometric_rowwise.schema.md  ghedesigner.schema.md  grout.schema.md  loads.schema.md  pipe_coaxial.schema.md  pipe_single_double_u_tube.schema.md  simulation.schema.md  soil.schema.md
scripts/: update_demo_results.py  update_version.py
search/: search_index.json
tests/: README.md  ghe_base_case.py  test_GHE.py  test_GLHE.py  test_bh_resistance.py  test_bh_resistance_double_u_tube.py  test_bh_resistance_single_u_tube.py  test_bh_resistance_validation.py  test_computed_g_function_sim_and_size.py  test_coordinates.py  test_create_bi_rectangle_input_file.py  test_create_near_square_input_file.py  test_create_rectangular_input_file.py  test_design.py  test_design_from_input.py  test_equiv_pipes.py  (+12 more)
(+888 files in other folders)
