[project]
name = "ghedesigner"
version = "1.5"
description = """A ground heat exchanger design tool with the capability
to select and size flexibly configured borehole fields that are customized
for specific building and property constraints."""
authors = [
    { name = "Jeffrey D. Spitler", email = "spitler@okstate.edu" }
]
dependencies = [
    'click~=8.1',
    'jsonschema~=4.19',
    'numpy~=1.26',
    'pygfunction~=2.2',
    'scipy~=1.13'
]
readme = "README.md"
requires-python = ">= 3.9, <3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
dev-dependencies = [
    "mkdocs-material ~= 9.5",
    'mkdocstrings[python] ~= 0.26.1',
    'mkdocs-schema-reader ~= 0.11.1',
    "pytest ~= 8.0",
    "pytest-cov ~= 5.0",
    "pre-commit ~= 3.5",
    "recursive-diff >= 1.1.0",
]

# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "ghedesigner/tests"
# Manually add these flags to `pytest` when running locally for coverage details.
addopts = ["--cov=ghedesigner", "--cov-report=html"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ghedesigner"]

[project.scripts]
ghedesigner = "ghedesigner.manager:run_manager_from_cli"

[project.gui-scripts]
ghedesigner_gui = "ghedesigner.gui.runner:main_gui"
